# inboil

./: .gitignore  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.claude/hooks/: git-confirm.sh
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/adr/: 022-lead-arpeggiator.md
docs/ai/: BACKLOG.md  DATA_MODEL.md  MESSAGE_FLOW.md  README.md  SWEEP_AUTOMATION.md  architecture.md  audio-interface.md  glossary.md  overview.md  scene-transition-noise.md  sequencer-spec.md  sound-design.md  ui-design.md  wasm-interface.md
e2e/: app.spec.ts
public/: _headers  demo-song.json
public/samples/: LICENSE-SAMPLES  clap_dr110.webm  clap_rd6.webm  cymbal_909-crash.webm  cymbal_crash.webm  cymbal_lofi.webm  factory.json  hat_closed-1.webm  hat_closed-2.webm  hat_half-open.webm  hat_jbk-closed.webm  hat_jbk-open.webm  hat_orch-closed.webm  hat_orch-open.webm  hat_pedal.webm  kick_casio-lofi.webm  kick_jbk-body.webm  kick_jbk-boom.webm  kick_jbk-deep.webm  kick_jbk-heavy.webm  kick_jbk-low.webm  (+103 more)
site/: astro.config.mjs  package.json
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/dsp/: CMakeLists.txt
src/dsp/engine/: Engine.cpp  Engine.h
src/dsp/fx/: AllpassFilter.h  BusCompressor.h  CombFilter.h  PingPongDelay.h  SidechainDucker.h  SimpleReverb.h
src/dsp/synth/: AnalogSynth.h  DrumSynth.h  FMSynth.h  NoiseSynth.h  SynthBase.h
src/dsp/wasm/: bindings.cpp
(+507 files in other folders)
